[gd_scene load_steps=5 format=2]

[ext_resource path="res://Project/UI/Screens/SoundSettingsScreen/SoundSettingsScreen.gd" type="Script" id=1]
[ext_resource path="res://Project/Resources/Themes/MainTheme.tres" type="Theme" id=2]
[ext_resource path="res://Project/UI/Components/Animated_dialog_button/AnimatedDialogButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Project/Resources/Fonts/Epilepsy Sans/Resource/EpilepsySansBold.tres" type="DynamicFont" id=4]

[node name="SoundSettingsScreen" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="MainMarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="MainMarginContainer"]
margin_right = 512.0
margin_bottom = 290.0
color = Color( 0.0941176, 0.0784314, 0.168627, 0.509804 )

[node name="SettingsMarginContainer" type="MarginContainer" parent="MainMarginContainer"]
margin_right = 175.0
margin_bottom = 202.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/margin_top = 60
custom_constants/margin_left = 25

[node name="ContentVBoxContainer" type="VBoxContainer" parent="MainMarginContainer/SettingsMarginContainer"]
margin_left = 25.0
margin_top = 60.0
margin_right = 175.0
margin_bottom = 202.0
custom_constants/separation = 30

[node name="Label" type="Label" parent="MainMarginContainer/SettingsMarginContainer/ContentVBoxContainer"]
margin_right = 150.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 4 )
text = "Звук"

[node name="ButtonsVBoxContainer" type="VBoxContainer" parent="MainMarginContainer/SettingsMarginContainer/ContentVBoxContainer"]
margin_top = 56.0
margin_right = 150.0
margin_bottom = 142.0
rect_min_size = Vector2( 150, 0 )

[node name="SFXLabel" type="Label" parent="MainMarginContainer/SettingsMarginContainer/ContentVBoxContainer/ButtonsVBoxContainer"]
margin_right = 150.0
margin_bottom = 14.0
text = "Звуковые эффекты"

[node name="SFXOptionHBoxContainer" type="HBoxContainer" parent="MainMarginContainer/SettingsMarginContainer/ContentVBoxContainer/ButtonsVBoxContainer"]
margin_top = 18.0
margin_right = 150.0
margin_bottom = 32.0

[node name="SFXOptionHSlider" type="HSlider" parent="MainMarginContainer/SettingsMarginContainer/ContentVBoxContainer/ButtonsVBoxContainer/SFXOptionHBoxContainer"]
margin_right = 126.0
margin_bottom = 8.0
size_flags_horizontal = 3
max_value = 10.0

[node name="SFXOptionValueLabel" type="Label" parent="MainMarginContainer/SettingsMarginContainer/ContentVBoxContainer/ButtonsVBoxContainer/SFXOptionHBoxContainer"]
margin_left = 130.0
margin_right = 150.0
margin_bottom = 14.0
rect_min_size = Vector2( 20, 0 )
text = "0"
align = 1

[node name="BackgroundMusicLabel" type="Label" parent="MainMarginContainer/SettingsMarginContainer/ContentVBoxContainer/ButtonsVBoxContainer"]
margin_top = 36.0
margin_right = 150.0
margin_bottom = 50.0
text = "Музыка"

[node name="BackgroundMusicOptionVBoxContainer" type="HBoxContainer" parent="MainMarginContainer/SettingsMarginContainer/ContentVBoxContainer/ButtonsVBoxContainer"]
margin_top = 54.0
margin_right = 150.0
margin_bottom = 68.0

[node name="BackgroundMusicOptionHSlider" type="HSlider" parent="MainMarginContainer/SettingsMarginContainer/ContentVBoxContainer/ButtonsVBoxContainer/BackgroundMusicOptionVBoxContainer"]
margin_right = 126.0
margin_bottom = 8.0
size_flags_horizontal = 3
max_value = 10.0

[node name="BackgroundMusicValueLabel" type="Label" parent="MainMarginContainer/SettingsMarginContainer/ContentVBoxContainer/ButtonsVBoxContainer/BackgroundMusicOptionVBoxContainer"]
margin_left = 130.0
margin_right = 150.0
margin_bottom = 14.0
rect_min_size = Vector2( 20, 0 )
text = "0"
align = 1

[node name="ExitButton" parent="MainMarginContainer/SettingsMarginContainer/ContentVBoxContainer/ButtonsVBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 72.0
margin_right = 24.0
margin_bottom = 86.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "exit"
align = 0
